--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
+authors = ["Michael Pankov <work@michaelpankov.com>"]
 name = "rustler"
 version = "0.1.0"
-authors = ["Michael Pankov <work@michaelpankov.com>"]
 
 [dependencies]
+rocket = "0.3.2"
+rocket_codegen = "0.3.2"
