--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,10 @@ name = "rustler"
 version = "0.1.0"
 
 [dependencies]
+arrayvec = "0.4.0"
 rocket = "0.3.2"
 rocket_codegen = "0.3.2"
+rocket_contrib = "0.3.2"
+serde = "1.0.11"
+serde_derive = "1.0.11"
+serde_json = "1.0.2"
