--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,7 @@ rocket_contrib = "0.3.2"
 serde = "1.0.11"
 serde_derive = "1.0.11"
 serde_json = "1.0.2"
+
+[[bin]]
+path = "src/main.rs"
+name = "rustler"
